--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -8,7 +8,7 @@
   "source": [
     "# 2 dimensional Continuity equation and Flux representation\n",
     "\n",
-    "In the following, the two dimensioanl continuity equation will be derived. From this, the Flux operator will be defined and \n",
+    "In the following, the two dimensional continuity equation will be derived. From this, the Flux operator will be defined and \n",
     "and represented using the imaginary part of wavefunction crossproduct.\n",
     "\n",
     "## 2 dimensional Continuity equation\n",
@@ -61,7 +61,7 @@
     "Which was to be shown. \n",
     "\n",
     "## Two dimensional Flux representation\n",
-    "$\\Psi$ is complex and can be written in the following form: $\\Psi = \\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}$. Then the following holds for $\\Psi$: $\\Psi^{\\ast} = \\Psi_{\\text{Re}}-i\\Psi_{\\text{Im}}, \\quad \\mathcal{Re}(\\Psi) = \\Psi_{\\text{Re}}$ and $\\mathcal{Im}(\\Psi) = \\Psi_{\\text{Im}}$. From this, the flux operator can be rewritten: \n",
+    "$\\Psi$ is complex and can be written in the following form: $\\Psi = \\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}$ with the complex conjugate provided by: $\\Psi$: $\\Psi^{\\ast} = \\Psi_{\\text{Re}}-i\\Psi_{\\text{Im}}$. From this, the flux operator can be rewritten: \n",
     "\n",
     "$\\begin{align}\n",
     "\\textbf{J} &= -i\\hbar\\left[\\Psi^{\\ast}M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast} \\right] \\notag \\\\\n",
@@ -72,16 +72,16 @@
     "\n",
     "&\\qquad \\; \\; - \\Psi_{\\text{Re}}M \\cdot \\nabla\\Psi_{\\text{Re}} + i \\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{\\text{Im}}-i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} - \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}}] \\notag \\\\\n",
     "\n",
-    "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] = \\hbar 2\\left[\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} -\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
+    "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] = 2 \\, \\hbar \\left[\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} -\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
     "\n",
     "\\end{align}$\n",
     "\n",
-    "Exploiting that $\\mathcal{Im}(\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Re}}) 0 \\land \\mathcal{Im}(\\Psi_{\\text{Im}} M \\cdot \\nabla \\Psi_{\\text{Im}}) = 0$ and therefore essentially adding '0' to eq. (4) yields: \n",
+    "The imaginary part of the wavefunction is provided by: $\\mathcal{Im}(a + ib) = b$. Multipliying the RHS. of eq. (4) by $i$ and adding the follwing terms: $\\mathcal{Im}(\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Re}}) =  0 \\land \\mathcal{Im}(\\Psi_{\\text{Im}} M \\cdot \\nabla \\Psi_{\\text{Im}}) = 0$ yields: \n",
     "\n",
     "$\\begin{align}\n",
-    "\\textbf{J} &= -i\\hbar 2\\left[i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} + \\right] \\notag \\\\\n",
+    "\\textbf{J} &= 2 \\, \\hbar\\left[\\left(\\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{Re} + \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{Im} \\right) + i \\left(\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right)\\right] \\notag \\\\\n",
     "\n",
-    "&= Hey \\notag \n",
+    "&= 2 \\, \\hbar\\left[\\Psi_{\\text{Re}}M \\cdot \\nabla \\left(\\Psi_{\\text{Re}}+i\\Psi_{\\text{Im}}\\right) - i \\Psi_{\\text{Im}} M\\cdot \\nabla \\left(\\Psi_{\\text{Re}+i\\Psi_{\\text{Im}}}\\right)\\right] \\notag \\\\\n",
     "\n",
     "\\end{align}$\n",
     "oggw"
