--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -76,15 +76,19 @@
     "\n",
     "\\end{align}$\n",
     "\n",
-    "The imaginary part of the wavefunction is provided by: $\\mathcal{Im}(a + ib) = b$. Multipliying the RHS. of eq. (4) by $i$ and adding the follwing terms: $\\mathcal{Im}(\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Re}}) =  0 \\land \\mathcal{Im}(\\Psi_{\\text{Im}} M \\cdot \\nabla \\Psi_{\\text{Im}}) = 0$ yields: \n",
+    "The imaginary part of the wavefunction is provided by: $\\mathcal{Im}(a + ib) = b$. Multiplying the RHS. of eq. (4) by $i$ and adding the follwing terms: $\\mathcal{Im}(\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Re}}) =  0 \\land \\mathcal{Im}(\\Psi_{\\text{Im}} M \\cdot \\nabla \\Psi_{\\text{Im}}) = 0$ yields: \n",
     "\n",
     "$\\begin{align}\n",
-    "\\textbf{J} &= 2 \\, \\hbar\\left[\\left(\\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{Re} + \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{Im} \\right) + i \\left(\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right)\\right] \\notag \\\\\n",
+    "\\textbf{J} &= 2 \\, \\hbar \\mathcal{Im}\\left[\\left(\\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{Re} + \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{Im} \\right) + i \\left(\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right)\\right] \\notag \\\\\n",
     "\n",
-    "&= 2 \\, \\hbar\\left[\\Psi_{\\text{Re}}M \\cdot \\nabla \\left(\\Psi_{\\text{Re}}+i\\Psi_{\\text{Im}}\\right) - i \\Psi_{\\text{Im}} M\\cdot \\nabla \\left(\\Psi_{\\text{Re}+i\\Psi_{\\text{Im}}}\\right)\\right] \\notag \\\\\n",
+    "&= 2 \\, \\hbar \\mathcal{Im}\\left[\\Psi_{\\text{Re}}M \\cdot \\nabla \\left(\\Psi_{\\text{Re}}+i\\Psi_{\\text{Im}}\\right) - i \\Psi_{\\text{Im}} M\\cdot \\nabla \\left(\\Psi_{\\text{Re}+i\\Psi_{\\text{Im}}}\\right)\\right] \\notag \\\\\n",
     "\n",
+    "&= 2 \\, \\hbar \\mathcal{Im}\\left[\\left(\\Psi_{\\text{Re}} - i \\Psi_{\\text{Im}}\\right)M \\cdot \\nabla \\left(\\Psi_{\\text{Re}}+i\\Psi_{\\text{Im}}\\right)\\right] = 2 \\, \\hbar \\mathcal{Im}\\left[\\left(\\Psi_{\\text{Re}} + i \\Psi_{\\text{Im}}\\right)^{\\ast}M \\cdot \\nabla \\left(\\Psi_{\\text{Re}}+i\\Psi_{\\text{Im}}\\right)\\right]  \\notag \\\\\n",
+    "\n",
+    " 2 \\, \\hbar \\mathcal{Im}\\left[\\Psi^{\\ast}M \\cdot \\nabla \\Psi\\right]  \\notag \\\\\n",
+    "\n"
     "\\end{align}$\n",
-    "oggw"
+    "which was to be shown."
    ]
   }
  ],
